# mb_slave

./: .gitignore  CMakeLists.txt
scripts/: s.sh  virtual_com.sh
src/: CMakeLists.txt  MbSlave.cpp  MbSlave.h  version.cpp
src/action/: ActionManager.cpp  ActionManager.h  CMakeLists.txt
src/action/modbus/: ModbusSlave.cpp  ModbusSlave.h
src/config/: CMakeLists.txt  Config.h  ConfigKeys.h
src/data/: CMakeLists.txt  DataManager.cpp  DataManager.h
src/data/range/: RangeManager.cpp  RangeManager.h
src/data/reg/: RegManager.cpp  RegManager.h
src/data/request/: RequestManager.cpp  RequestManager.h
src/example/use_ini/: mb.ini  new_ini.cpp
src/example/use_mb/: example.ini  example1.ini  main.cpp
src/helpers/: CMakeLists.txt  IniFile.cpp  IniFile.h  String.cpp  String.h  Time.cpp  Time.h
src/types/: CMakeLists.txt  MemoryChunk.h  MemoryMapInfo.h  ModbusConnection.h  ModbusEnums.h  ModbusRegister.h  ModbusTrans.h
src/version/: CMakeLists.txt  Version.h
